# teamwork

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MEMORY.md  Makefile  README.md  go.mod
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: planning.yml  task.yml
.github/agents/: architect.agent.md  coder.agent.md  documenter.agent.md  orchestrator.agent.md  planner.agent.md  reviewer.agent.md  tester.agent.md
.github/workflows/: teamwork-ci.yaml.example
.teamwork/: config.yaml
agents/: README.md
agents/roles/: architect.md  coder.md  documenter.md  orchestrator.md  planner.md  reviewer.md  security-auditor.md  tester.md
agents/workflows/: bugfix.md  dependency-update.md  documentation.md  feature.md  hotfix.md  refactor.md  (+4 more)
docs/: architecture.md  cli.md  conventions.md  glossary.md  mcp.md  onboarding.md  protocols.md  quick-reference.md  releasing.md  role-selector.md  state-machines.md
mcp-servers/: README.md
mcp-servers/adr/: Dockerfile  README.md  pyproject.toml
mcp-servers/adr/src/teamwork_mcp_adr/: __init__.py  server.py
mcp-servers/adr/tests/: test_server.py
mcp-servers/adr/tests/fixtures/decisions/: 001-use-react.md  002-api-auth.md  003-database-choice.md
mcp-servers/changelog/: Dockerfile  README.md  pyproject.toml
mcp-servers/changelog/src/teamwork_mcp_changelog/: __init__.py  server.py
mcp-servers/changelog/tests/: test_server.py
mcp-servers/commits/: Dockerfile  README.md  pyproject.toml
mcp-servers/commits/src/teamwork_mcp_commits/: __init__.py  server.py
mcp-servers/commits/tests/: test_server.py
mcp-servers/complexity/: Dockerfile  README.md  pyproject.toml
mcp-servers/complexity/src/teamwork_mcp_complexity/: __init__.py  server.py
mcp-servers/complexity/tests/: test_server.py
mcp-servers/complexity/tests/fixtures/: complex.go  mixed.js  simple.py
mcp-servers/coverage/: Dockerfile  README.md  pyproject.toml
mcp-servers/coverage/src/teamwork_mcp_coverage/: __init__.py  server.py
mcp-servers/coverage/tests/: test_server.py
mcp-servers/coverage/tests/fixtures/: cover.out  coverage-summary.json  sample.lcov
(+143 files in other folders)
