[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teamwork-mcp-adr"
version = "0.1.0"
description = "MCP server for Architecture Decision Record management"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "python-frontmatter>=1.0.0", "pyyaml>=6.0"]

[project.scripts]
teamwork-mcp-adr = "teamwork_mcp_adr.server:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
