[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teamwork-mcp-changelog"
version = "0.1.0"
description = "MCP server for changelog generation using git-cliff"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
teamwork-mcp-changelog = "teamwork_mcp_changelog.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
