[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teamwork-mcp-coverage"
version = "0.1.0"
description = "MCP server for test coverage report analysis"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
teamwork-mcp-coverage = "teamwork_mcp_coverage.server:main"
